--- a/app/client/layouts/admin_layout/admin_layout.html
+++ b/app/client/layouts/admin_layout/admin_layout.html
@@ -1,7 +1,10 @@
 <template name='adminLayout'>
 	<div id='admin-layout'>
 		<div>
-			Welcome to the admin layout
+			<h1>Welcome to the admin layout</h1>
+			{{#if currentUser}}
+			<a href="{{pathFor 'logout'}}">sign out</a>
+			{{/if}}
 		</div>
 		<div>
 			{{> yield}}
